# wkflws_openai

./: .flake8  README.md  setup.cfg
wkflws_openai/: __init__.py  parameters.json  text.py
